cleanup and change navigator

--- a/public/html/viewer_portal.html
+++ b/public/html/viewer_portal.html
@@ -16,35 +16,27 @@
 <body>
 
 
-    <nav id="navigator" class="navbar navbar-default" style="margin-bottom: 0px">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="/index.html">Team 1325</a>
-        </div>
-        <ul class="nav navbar-nav">
-          <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Inputter
-            <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="/html/inputter_portal.html">Portal</a></li>
-              <li><a href="/html/inputter.html">Match Input</a></li>
-              <li><a href="/html/specs.html">Team Specs</a></li>
-            </ul>
-          </li>
-          <li class="dropdown active">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Viewer
-            <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="/html/viewer_portal.html">Portal</a></li>
-              <li><a href="/html/raw_data.html">Raw Data</a></li>
-              <li><a href="/html/team_search.html">Team Search</a></li>
-              <li><a href="/html/alliance.html">View Alliance</a></li>
-              <li><a href="/html/rankings.html">Rankings</a></li>
-            </ul>
-          </li>
-        </ul>
+  <nav id="navigator" class="navbar navbar-default" style="margin-bottom: 0px">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/index.html">Team 4308</a>
       </div>
-    </nav>
+      <ul class="nav navbar-nav">
+        <a href="/html/data_entry.html">Data Entry</a>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Data Viewer
+          <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/html/viewer_portal.html">Portal</a></li>
+            <li><a href="/html/raw_data.html">Raw Data</a></li>
+            <li><a href="/html/team_search.html">Team Search</a></li>
+            <li><a href="/html/compare_teams.html">Compare Teams</a></li>
+            <li><a href="/html/overall.html">Overall Insights</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
   <div class="jumbotron vertical-center" style="margin-bottom:0px">
     <div class="container text-center">
