--- a/public/html/data_entry.html
+++ b/public/html/data_entry.html
@@ -16,7 +16,7 @@
   <nav id="navigator" class="navbar navbar-default" style="margin-bottom: 0px">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/index.html">Team 4308</a>
+        <a class="navbar-brand" href="/">Team 4308</a>
       </div>
       <ul class="nav navbar-nav">
         <a href="/html/data_entry.html">Data Entry</a>
