--- a/public/html/team_search.html
+++ b/public/html/team_search.html
@@ -7,34 +7,37 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/styles.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
   <script src="https://www.gstatic.com/firebasejs/3.7.0/firebase.js"></script>
 </head>
 
 <body>
 
 
-  <nav id="navigator" class="navbar navbar-default" style="margin-bottom: 0px">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="/">Team 4308</a>
-      </div>
-      <ul class="nav navbar-nav">
-        <li>
-            <a href="/html/data_entry.html">Data Entry</a>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">Team 4308</a>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/html/data_entry.html">Data Entry</a>
         </li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Data Viewer
-          <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="/html/viewer_portal.html">Portal</a></li>
-            <li><a href="/html/raw_data.html">Raw Data</a></li>
-            <li><a href="/html/team_search.html">Team Search</a></li>
-            <li><a href="/html/compare_teams.html">Compare Teams</a></li>
-            <li><a href="/html/overall.html">Overall Insights</a></li>
-          </ul>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Data Viewer
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/html/viewer_portal.html">Portal</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/html/raw_data.html">Raw Data</a>
+            <a class="dropdown-item" href="/html/team_search.html">Team Search</a>
+            <a class="dropdown-item" href="/html/compare_teams.html">Compare Teams</a>
+            <a class="dropdown-item" href="/html/rankings.html">Rankings</a>
+          </div>
         </li>
       </ul>
     </div>
