--- a/public/html/data_entry.html
+++ b/public/html/data_entry.html
@@ -3,328 +3,45 @@
 
 <head>
   <title>Input Match Data</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="stylesheet" href="/css/styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-  <script src="https://www.gstatic.com/firebasejs/3.7.0/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+
+  <script src="https://www.w3schools.com/lib/w3data.js"></script>
+
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">Team 4308</a>
+  <div w3-include-html="/core/nav.html"></div>
+  <script>w3IncludeHTML();</script>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="/html/data_entry.html">Data Entry</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Data Viewer
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/html/viewer_portal.html">Portal</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/html/raw_data.html">Raw Data</a>
-            <a class="dropdown-item" href="/html/team_search.html">Team Search</a>
-            <a class="dropdown-item" href="/html/compare_teams.html">Compare Teams</a>
-            <a class="dropdown-item" href="/html/rankings.html">Rankings</a>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-  <div class="jumbotron vertical-center" id="team-input" style="margin-bottom: 0px">
-    <div class="container">
-      <div class="text-center">
-        <h1>Preliminary Information</h1>
-      </div>
-      <br>
-      <div class="form-group">
-        <input type="text" class="form-control" id="team" placeholder="Team Number">
-      </div>
-      <div class="form-group">
-        <input type="text" class="form-control" id="matchnumber" placeholder="Match Number">
-      </div>
-      <div class="text-center">
-        <button type="button" class="btn btn-block btn-default" onclick="enterTeam()">Create New!</button>
-        <!-- <button type="button" class="btn btn-block btn-default" onclick="">Edit Existing! (Under construction)</button> -->
-      </div>
-    </div>
-  </div>
-
+  <script src="/core/fireinit.js"></script>
   
-  <div class="container-fluid text-center" id="content-input" style="margin-bottom: 0px; display: none">
-    <h1 id="team-header">ayy lmao</h1>
-    <h3 id="matchnumber-header">ayy lmao</h3>
+  <!-- <script src="/js/data_entry.js"></script> -->
+
+  <div class="container">
     <br>
-    <div class="col-md-1">
-    </div>
-    <div class="col-md-10">
-      <h2 class="text-center">Match Information</h2>
-      <form>
-        <input type="text" class="form-control" placeholder="Scouter Name" name="name" id="scouter">
-        <select id="position" class="form-control">
-          <option selected>Starting Position...</option>
-          <option>Left</option>
-          <option>Middle</option>
-          <option>Right</option>
-        </select>
-        <div class="row">
-          <div class="col-md-12">
-            <h2 class="text-center">Autonomous</h2>
-            <div class="row">
-              <div class="col-md-4">
-              </div>
-              <div class="col-md-2">
-                <label>Crossed Baseline</label>
-              </div>
-              <div class="col-md-6">
-                <div class="form-check form-check-inline col-md-1">
-                  <input class="form-check-input" type="radio" name="baseline" id="inlineRadio1" value="yes">
-                  <label class="form-check-label" for="inlineRadio1">Yes</label>
-                </div>
-                <div class="form-check form-check-inline col-md-1">
-                  <input class="form-check-input" type="radio" name="baseline" id="inlineRadio2" value="no" checked="checked">
-                  <label class="form-check-label" for="inlineRadio2">No</label>
-                </div>
-                <div class="form-check form-check-inline col-md-2">
-                  <input class="form-check-input" type="radio" name="baseline" id="inlineRadio2" value="failed">
-                  <label class="form-check-label" for="inlineRadio2">Failed Attempt</label>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Auto Switch Success</label>
-              </div>
-              <div class="col-md-6">
-                <input type="number" class="form-control" placeholder=" Switch Successes" name="switch_success" id="auto_switch_success" value="0">
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Auto Switch Failure</label>
-              </div>
-              <div class="col-md-6">
-                <input type="number" class="form-control" placeholder="Switch Failures" name="switch_fail" id="auto_switch_fail" value="0">
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Auto Scale Success</label>
-              </div>
-              <div class="col-md-6">
-                <input type="number" class="form-control" placeholder="Scale Successes" name="scale_success" id="auto_scale_success" value="0">
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Auto Scale Failure</label>
-              </div>
-              <div class="col-md-6">
-                <input type="number" class="form-control" placeholder="Scale Failures" name="scale_fail" id="auto_scale_fail" value="0">
-              </div>
-            </div
-            <hr>
-          </div>
-          
-          <div class="col-md-12">
-            <h2 class="text-center">Teleoperated</h2>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Switch Success</label>
-              </div>
-              <div class="col-md-6">
-                <input type="number" class="form-control" placeholder=" Switch Successes" name="switch_success" id="teleop_switch_success" value="0">
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Switch Failure</label>
-              </div>
-              <div class="col-md-6">
-                <input type="number" class="form-control" placeholder="Switch Failures" name="switch_fail" id="teleop_switch_fail" value="0">
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Scale Success</label>
-              </div>
-              <div class="col-md-6">
-                <input type="number" class="form-control" placeholder="Scale Successes" name="scale_success" id="teleop_scale_success" value="0">
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Scale Failure</label>
-              </div>
-              <div class="col-md-6">
-                <input type="number" class="form-control" placeholder="Scale Failures" name="scale_fail" id="teleop_scale_fail" value="0">
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Opposite Switch Success</label>
-              </div>
-              <div class="col-md-6">
-                <input type="number" class="form-control" placeholder="Opposite Switch Successes" name="opp_switch_success" id="teleop_opp_switch_success" value="0">
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Opposite Switch Failure</label>
-              </div>
-              <div class="col-md-6">
-                <input type="number" class="form-control" placeholder="Opposite Switch Failures" name="opp_switch_fail" id="teleop_opp_switch_fail" value="0">
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Vault Cubes</label>
-              </div>
-              <div class="col-md-6">
-                <input type="number" class="form-control" placeholder="Vault Cubes" name="vault" id="teleop_vault" value="0">
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Play Type</label>
-              </div>
-              <div class="col-md-6">
-                <div class="form-check form-check-inline col-md-6">
-                  <input class="form-check-input" type="checkbox" name="offense" id="offense" value="offense" checked="checked">
-                  <label class="form-check-label" for="inlineRadio1">Offensive</label>
-                </div>
-                <div class="form-check form-check-inline col-md-6">
-                  <input class="form-check-input" type="checkbox" name="type" id="defense" value="defense">
-                  <label class="form-check-label" for="inlineRadio2">Defensive</label>
-                </div>
-              </div>
-            </div>
-            <br>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Climb</label>
-              </div>
-              <div class="col-md-6">
-                <select id="climb" class="form-control">
-          <option selected>Climb...</option>
-          <option>Self Climb</option>
-          <option>Deployed Ramps</option>
-          <option>Climbed on Ramps</option>
-          <option>Parked</option>
-          <option>Failed Park</option>
-          <option>Failed Climb</option>
-          <option>Did not Attempt</option>
-        </select>
-<!--                       <div class="form-check form-check-inline col-md-2">
-                  <input class="form-check-input" type="radio" name="climb" id="inlineRadio1" value="Self Climb">
-                  <label class="form-check-label" for="inlineRadio1">Self-Climb</label>
-                </div>
-                <div class="form-check form-check-inline col-md-2">
-                  <input class="form-check-input" type="radio" name="climb" id="inlineRadio2" value="Deployed Ramps" checked="checked">
-                  <label class="form-check-label" for="inlineRadio2">Deployed Ramps</label>
-                </div>
-                <div class="form-check form-check-inline col-md-2">
-                  <input class="form-check-input" type="radio" name="climb" id="inlineRadio3" value="Climbed Ramps">
-                  <label class="form-check-label" for="inlineRadio3">Climbed on Ramps</label>
-                </div>
-                <div class="form-check form-check-inline col-md-2">
-                  <input class="form-check-input" type="radio" name="climb" id="inlineRadio4" value="Did not Attempt">
-                  <label class="form-check-label" for="inlineRadio4">Did not Attempt</label>
-                </div>
-                <div class="form-check form-check-inline col-md-2">
-                  <input class="form-check-input" type="radio" name="climb" id="inlineRadio5" value="Missed Climb">
-                  <label class="form-check-label" for="inlineRadio5">Missed Climb</label>
-                </div> -->
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Powerups</label>
-              </div>
-              <div class="col-md-6">
-                <div class="form-check form-check-inline col-md-4">
-                  <input class="form-check-input" type="checkbox" name="type" id="boost" value="boost">
-                  <label class="form-check-label" for="inlineRadio1">Boost</label>
-                </div>
-                <div class="form-check form-check-inline col-md-4">
-                  <input class="form-check-input" type="checkbox" name="type" id="force" value="force">
-                  <label class="form-check-label" for="inlineRadio2">Force</label>
-                </div>
-                <div class="form-check form-check-inline col-md-4">
-                  <input class="form-check-input" type="checkbox" name="type" id="levitate" value="levitate">
-                  <label class="form-check-label" for="inlineRadio2">Levitate</label>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Powerups Times</label>
-              </div>
-              <div class="col-md-6">
-                <textarea class="form-control" id="powerup_time" rows="2"></textarea>
-              </div>
-            </div>
-            <br>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Disconnects</label>
-              </div>
-              <div class="col-md-6">
-                <textarea class="form-control" id="dcs" rows="2"></textarea>
-              </div>
-            </div>
-            <br>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Other Notes</label>
-              </div>
-              <div class="col-md-6">
-                <textarea class="form-control" id="comment" rows="2"></textarea>
-              </div>
-            </div>
-          </div>
-        </div>
-        <hr>
-        <button type="submit" class="btn btn-primary" onclick="submitData()" value="inputter.html">Submit</button>
-      </form>
-    </div>
-    <div class="col-md-1">
+    <h1>
+      Data Entry!
+    </h1>
+    <br>
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text">Team Number</span>
+      </div>
+      <input type="text" class="form-control" placeholder="Number..." aria-label="Number..." aria-describedby="basic-addon1">
     </div>
   </div>
   
-
-  <div class="jumbotron vertical-center" id="uploading-wait" style="margin-bottom: 0px; display: none">
-    <div class="container">
-      <div class="text-center">
-        <h1>Uploading...</h1>
-      </div>
-      <div class="text-center">
-        <button type="button" class="btn btn-block btn-default" onclick="finishReset()">Next Team</button>
-      </div>
-      <br>
-      <div id="matchdata-loading" class="alert alert-warning">
-        Uploading match data to database...
-        <span class="glyphicon glyphicon-transfer pull-right"></span>
-      </div>
-      <div id="matchinfo-loading" class="alert alert-warning">
-        Uploading match info to database...
-        <span class="glyphicon glyphicon-transfer pull-right"></span>
-      </div>
-    </div>
-  </div>
-
-  
-  <script src="/js/fireinit.js?v=1359283"></script>
-  <script src="/js/data_entry.js"></script>
 
 </body>
 
