--- a/public/html/data_entry.html
+++ b/public/html/data_entry.html
@@ -36,10 +36,42 @@
     <br>
     <div class="input-group mb-3">
       <div class="input-group-prepend">
-        <span class="input-group-text">Team Number</span>
+        <span class="input-group-text">Team #</span>
       </div>
-      <input type="text" class="form-control" placeholder="Number..." aria-label="Number..." aria-describedby="basic-addon1">
+      <input type="number" class="form-control" placeholder="Number...">
     </div>
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text">Match #</span>
+      </div>
+      <input type="number" class="form-control" placeholder="Number...">
+    </div>
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text">Scouter</span>
+      </div>
+      <input type="text" class="form-control" placeholder="Name...">
+    </div>
+
+    <h5>
+      Starting Position:
+    </h5>
+    <div class="input-group btn-group btn-group-toggle" data-toggle="buttons">
+      <label class="btn btn-secondary active">
+        <input type="radio" name="startingpos" id="option1" autocomplete="off" checked>&nbsp;&nbsp;Left&nbsp;&nbsp;
+      </label>
+      <label class="btn btn-secondary">
+        <input type="radio" name="startingpos" id="option2" autocomplete="off">Center
+      </label>
+      <label class="btn btn-secondary">
+        <input type="radio" name="startingpos" id="option3" autocomplete="off">&nbsp;Right&nbsp;
+      </label>
+    </div>
+
+    <br>
+    
+
+
   </div>
   
 
