add auto input and tune verification

--- a/public/html/data_entry.html
+++ b/public/html/data_entry.html
@@ -77,11 +77,11 @@
       <div class="input-group-prepend">
         <span class="input-group-text">Plate 1</span>
       </div>
-      <label id="plate-1" class="btn btn-outline-secondary" value="L">
-        <input type="radio" name="plate-1" id="option1" autocomplete="off">&nbsp;&nbsp;Left&nbsp;&nbsp;
+      <label id="plate_1" class="btn btn-outline-secondary" value="L">
+        <input type="radio" name="plate_1" id="option1" autocomplete="off">&nbsp;&nbsp;Left&nbsp;&nbsp;
       </label>
-      <label id="plate-1" class="btn btn-outline-secondary" value="R">
-        <input type="radio" name="plate-1" id="option2" autocomplete="off">&nbsp;Right&nbsp;
+      <label id="plate_1" class="btn btn-outline-secondary" value="R">
+        <input type="radio" name="plate_1" id="option2" autocomplete="off">&nbsp;Right&nbsp;
       </label>
     </div>
     <br>
@@ -89,11 +89,11 @@
       <div class="input-group-prepend">
         <span class="input-group-text">Plate 2</span>
       </div>
-      <label id="plate-2" class="btn btn-outline-secondary" value="L">
-        <input type="radio" name="plate-2" id="option1" autocomplete="off">&nbsp;&nbsp;Left&nbsp;&nbsp;
+      <label id="plate_2" class="btn btn-outline-secondary" value="L">
+        <input type="radio" name="plate_2" id="option1" autocomplete="off">&nbsp;&nbsp;Left&nbsp;&nbsp;
       </label>
-      <label id="plate-2" class="btn btn-outline-secondary" value="R">
-        <input type="radio" name="plate-2" id="option2" autocomplete="off">&nbsp;Right&nbsp;
+      <label id="plate_2" class="btn btn-outline-secondary" value="R">
+        <input type="radio" name="plate_2" id="option2" autocomplete="off">&nbsp;Right&nbsp;
       </label>
     </div>
     <br>
@@ -101,11 +101,11 @@
       <div class="input-group-prepend">
         <span class="input-group-text">Plate 3</span>
       </div>
-      <label id="plate-3" class="btn btn-outline-secondary" value="L">
-        <input type="radio" name="plate-3" id="option1" autocomplete="off">&nbsp;&nbsp;Left&nbsp;&nbsp;
+      <label id="plate_3" class="btn btn-outline-secondary" value="L">
+        <input type="radio" name="plate_3" id="option1" autocomplete="off">&nbsp;&nbsp;Left&nbsp;&nbsp;
       </label>
-      <label id="plate-3" class="btn btn-outline-secondary" value="R">
-        <input type="radio" name="plate-3" id="option2" autocomplete="off">&nbsp;Right&nbsp;
+      <label id="plate_3" class="btn btn-outline-secondary" value="R">
+        <input type="radio" name="plate_3" id="option2" autocomplete="off">&nbsp;Right&nbsp;
       </label>
     </div>
 
@@ -118,35 +118,35 @@
       <div class="input-group-prepend">
         <span class="input-group-text">Switch Scored</span>
       </div>
-      <input type="number" class="form-control" placeholder="Number...">
+      <input id="auto_switch_score" type="number" class="form-control" placeholder="Number...">
     </div>
     <div class="input-group mb-3">
       <div class="input-group-prepend">
         <span class="input-group-text">Switch Missed</span>
       </div>
-      <input type="number" class="form-control" placeholder="Number...">
+      <input id="auto_switch_miss" type="number" class="form-control" placeholder="Number...">
     </div>
     <div class="input-group mb-3">
       <div class="input-group-prepend">
         <span class="input-group-text">Scale Scored</span>
       </div>
-      <input type="number" class="form-control" placeholder="Number...">
+      <input id="auto_scale_score" type="number" class="form-control" placeholder="Number...">
     </div>
     <div class="input-group mb-3">
       <div class="input-group-prepend">
         <span class="input-group-text">Scale Missed</span>
       </div>
-      <input type="number" class="form-control" placeholder="Number...">
+      <input id="auto_scale_miss" type="number" class="form-control" placeholder="Number...">
     </div>
 
     <div class="input-group btn-group btn-group-toggle" data-toggle="buttons">
       <div class="input-group-prepend">
         <span class="input-group-text">Reachline</span>
       </div>
-      <label class="btn btn-outline-secondary active">
-        <input type="radio" name="reachline" id="option1" autocomplete="off" checked>&nbsp;Yes&nbsp;
+      <label id="reachline" class="btn btn-outline-secondary" value="1">
+        <input type="radio" name="reachline" id="option1" autocomplete="off">&nbsp;Yes&nbsp;
       </label>
-      <label class="btn btn-outline-secondary">
+      <label id="reachline" class="btn btn-outline-secondary" value="0">
         <input type="radio" name="reachline" id="option2" autocomplete="off">&nbsp;No&nbsp;
       </label>
     </div>
