--- a/public/html/raw_data.html
+++ b/public/html/raw_data.html
@@ -29,7 +29,7 @@
   <br>
 
   <div class="container">
-    <ul id="allteams" class="list-group"></ul>
+    <ul id="allmatches" class="list-group"></ul>
   </div>
 
   <script src="/js/fireinit.js"></script>
