--- a/public/html/raw_data.html
+++ b/public/html/raw_data.html
@@ -32,7 +32,7 @@
     <ul id="allmatches" class="list-group"></ul>
   </div>
 
-  <script src="/js/fireinit.js"></script>
+  <script src="/core/fireinit.js"></script>
   <script src="/js/raw_data.js"></script>
 
 </body>
