modify data entry n/a to no attempt

--- a/public/html/team_search.html
+++ b/public/html/team_search.html
@@ -28,6 +28,7 @@
 
   <script src="/core/fireinit.js"></script>
   <script src="/js/team_search.js"></script>
+  <script src="/js/team_search_matchhistory.js"></script>
 
   <div class="container">
     <br>
@@ -103,6 +104,25 @@
             </tr>
           </thead>
           <tbody id="teleop_table">
+
+          </tbody>
+        </table>
+      </div>
+      <br>
+      <div class="table-responsive">
+        <h4>
+          Misc. Table
+        </h4>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">Match #</th>
+              <th scope="col">Start</th>
+              <th scope="col">Plates</th>
+              <th scope="col">Climb</th>
+            </tr>
+          </thead>
+          <tbody id="misc_table">
 
           </tbody>
         </table>
