--- a/public/html/data_entry.html
+++ b/public/html/data_entry.html
@@ -213,7 +213,7 @@
       <label class="custom-control-label" for="climb-2">Failed Climb</label>
     </div>
     <div class="custom-control custom-radio">
-      <input type="radio" id="climb-3" name="climb" class="custom-control-input" value="n/a">
+      <input type="radio" id="climb-3" name="climb" class="custom-control-input" value="no attempt">
       <label class="custom-control-label" for="climb-3">Did Not Attempt</label>
     </div>
     <br>
