match history done

--- a/public/html/team_search.html
+++ b/public/html/team_search.html
@@ -127,6 +127,23 @@
           </tbody>
         </table>
       </div>
+      <br>
+      <div class="table-responsive">
+        <h4>
+          Comment Table
+        </h4>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">Match #</th>
+              <th scope="col">Comment</th>
+            </tr>
+          </thead>
+          <tbody id="comment_table">
+
+          </tbody>
+        </table>
+      </div>
     </div>
 
     <div id="section-tab-matchesgraphs" style="display: none">
