--- a/public/core/nav.html
+++ b/public/core/nav.html
@@ -17,8 +17,8 @@
             <a class="dropdown-item" href="/html/viewer_portal.html">Portal</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/html/raw_data.html">Raw Data</a>
+            <a class="dropdown-item" href="/html/match_search.html">Match Search</a>
             <a class="dropdown-item" href="/html/team_search.html">Team Search</a>
-            <a class="dropdown-item" href="/html/compare_teams.html">Compare Teams</a>
             <a class="dropdown-item" href="/html/rankings.html">Rankings</a>
             </div>
         </li>
