modify data entry to add matches

--- a/public/html/data_entry.html
+++ b/public/html/data_entry.html
@@ -69,6 +69,20 @@
     </div>
 
     <br>
+
+    <h5>
+      Alliance:
+    </h5>
+    <div class="input-group btn-group btn-group-toggle" data-toggle="buttons">
+      <label id="alliance" class="btn btn-outline-secondary" value="red">
+        <input type="radio" name="alliance" id="option1" autocomplete="off">&nbsp;&nbsp;Red&nbsp;&nbsp;
+      </label>
+      <label id="alliance" class="btn btn-outline-secondary" value="blue">
+        <input type="radio" name="alliance" id="option2" autocomplete="off">&nbsp;Blue&nbsp;
+      </label>
+    </div>
+
+    <br>
     
     <h5>
       Plate Assignments:
