reorder data entry form

--- a/public/html/data_entry.html
+++ b/public/html/data_entry.html
@@ -46,12 +46,6 @@
       </div>
       <input id="matchnumber" type="number" class="form-control" placeholder="Number...">
     </div>
-    <div class="input-group mb-3">
-      <div class="input-group-prepend">
-        <span class="input-group-text">Scouter</span>
-      </div>
-      <input id="scouter" type="text" class="form-control" placeholder="Name...">
-    </div>
 
     <h5>
       Starting Position:
@@ -253,10 +247,20 @@
     
     <br>
 
+    
     <h5>
-      Comments:
+      Other:
     </h5>
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text">Scouter</span>
+      </div>
+      <input id="scouter" type="text" class="form-control" placeholder="Name...">
+    </div>
     <div class="input-group">
+      <div class="input-group-prepend">
+        <span class="input-group-text">Comments</span>
+      </div>
       <textarea id="comment" class="form-control" placeholder="Comments..."></textarea>
     </div>
 
